# inference-cache

./: .claude  .gitignore  .golangci.yml  CONTRIBUTING.md  Makefile  PROJECT  PROJECT_CONTEXT.md  README.md  buf.yaml  go.mod  go.sum
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: c2-reconciler-canary.yml  c6-engine-wiring-canary.yml  ci.yml  codeql.yml  codex-review.yml  cpu-substrate-canary.yml  default-install-smoke.yml  release-sbom.yml
api/v1alpha1/: cachebackend_types.go  cachebackend_types_test.go  cacheindex_types.go  cachepolicy_types.go  cachetenant_types.go  groupversion_info.go  pdtopology_types.go  prompttemplate_types.go  remaining_crds_types_test.go  zz_generated.deepcopy.go
cmd/controller/: main.go
cmd/inferencecache/: doctor.go  doctor_args_test.go  doctor_integration_test.go  doctor_unit_test.go  main.go
cmd/kvevent-fake-engine/: e2e_test.go  main.go  main_test.go
cmd/kvevent-subscriber/: main.go  main_test.go
cmd/server/: main.go  main_test.go
config/certmanager/: certificate.yaml
config/crd/: kustomization.yaml
config/default/: kustomization.yaml  manager_webhook_patch.yaml  namespace.yaml  webhookcainjection_patch.yaml
config/manager/: manager.yaml
config/observability/: alerting-rules.yaml  kustomization.yaml  podmonitor.yaml  prometheus-rules-tests.yaml  (+2 more)
dockerfiles/: Dockerfile
docs/: quickstart.md
hack/: sbom-registry-smoke.sh  verify-syft-version.sh
plugins/: inferencecache.yaml
rust/ictokenizer/: Cargo.toml  README.md
rust/ictokenizer/src/: lib.rs
(+333 files in other folders)
